@@ -141,6 +141,7 @@ div.split div.three-center
 span
 {
   background-color: #ccffff;
+  border: 1px solid #eeffff;
 }
 
 
