@@ -1,43 +1,44 @@
 {set scope=global persistent_variable=hash('title', 'Custom tag properties'|i18n('design/standard/ezoe'),
-                                           'scripts', array('javascript/ez_core.js',
-                                                            'javascript/ez_core_animation.js',
-                                                            'javascript/ez_core_accordion.js',
-                                                            'javascript/ez_oe_popup.js'),
+                                           'scripts', array('javascript/ezoe/ez_core.js',
+                                                            'javascript/ezoe/ez_core_animation.js',
+                                                            'javascript/ezoe/ez_core_accordion.js',
+                                                            'javascript/ezoe/popup.js'),
                                            'css', array()
                                            )}
 
 <script type="text/javascript">
 <!--
 
-var tinyMCEelement = false, ezTagName = '{$tag_name|wash}', customAttributeTables = false; 
+var tinyMCEelement = false, ezTagName = '{$tag_name|wash}', customTagName = '{$custom_tag_name}'; 
 {literal} 
 
 tinyMCEPopup.onInit.add( function()
 {
     // Initialize page with default values and tabs
-    var ed = tinyMCEPopup.editor, el = ed.selection.getNode(), n = ez.$('custom_class_source'), arr, selectedTag = n.el.value;
+    var ed = tinyMCEPopup.editor, el = ed.selection.getNode(), n = ez.$('custom_class_source'), arr;
     if ( el && el.nodeName )
     {
         // see if selected tag or one of its parent tags is a custom tag
-        if ( selectedTag === 'underline' && el.nodeName === 'U' )
+        if ( customTagName === 'underline' && el.nodeName === 'U' )
         {
             tinyMCEelement = el;
             // if custom tag is underline, we disable selector to avoid problems (different tag used)
             n.el.disabled = true;
         }
-        else if ( el.nodeName === ezXmlToXhtmlHash[ ezTagName ] )
+        else if ( el.nodeName === 'SPAN' && el.className == customTagName )
             tinyMCEelement = el;
-        else if ( ezXmlToXhtmlHash[ ezTagName ] && ( el = ed.dom.getParent(el, ezXmlToXhtmlHash[ ezTagName ] ) ) )
-            tinyMCEelement = el;
-        else if ( el = ed.dom.getParent(el, ezTagName ) )
-            tinyMCEelement = el;
+        
+        if ( el.nodeName === 'SPAN' && el.style.display !== 'block' )
+            filterOutCustomBlockTags( ); 
+        else if ( el = ed.dom.getParent(el, 'SPAN' ) && el.style.display && el.style.display !== 'block' )
+            filterOutCustomBlockTags( );  
     }
 
     if ( tinyMCEelement )
     {
         if ( tinyMCEelement.className )
-            n.el.value = selectedTag = tinyMCEelement.className;
-        initCustomAttributeValue( selectedTag + '_customattributes', tinyMCEelement.getAttribute('customattributes'));
+            n.el.value = customTagName = tinyMCEelement.className;
+        initCustomAttributeValue( customTagName + '_customattributes', tinyMCEelement.getAttribute('customattributes'));
     }
     // toggle custom attributes based on selected custom tag
     toggleCustomAttributes.call( n );
@@ -47,7 +48,10 @@ tinyMCEPopup.onInit.add( function()
 function specificTagGenerator( ezTag, customTag )
 {
     var inline = ez.$( customTag + '_inline_source' ).el.checked;
-    return '<span id="__mce_tmp" type="custom" style="display: ' + ( inline ? 'inline' : 'block' ) + '"><p></p></span>';
+    if ( inline )
+        return '<span id="__mce_tmp" type="custom">' + customTag + '</span>';
+    else
+        return '<span id="__mce_tmp" type="custom" style="display: block;"><p>' + customTag + '</p></span>';
 }
 
 function specificTagEditor( el, ed, customTag )
@@ -56,6 +60,18 @@ function specificTagEditor( el, ed, customTag )
     el.style.display = inline ? 'inline' : 'block';
 }
 
+
+function filterOutCustomBlockTags( n )
+{
+    var inlineTags = ez.$c();
+    ez.$$('input[id*=_inline_source]').forEach(function( o ){
+        if ( o.el.checked ) inlineTags.push( o.el.name.split('_')[0] );
+    });
+    ez.$$('#custom_class_source option').forEach(function( o ){
+        if ( inlineTags.indexOf( o.el.value ) === -1 ) o.el.parentNode.removeChild( o.el );
+    });
+    
+}
 
 function toggleCustomAttributes( )
 {
@@ -82,7 +98,7 @@ function toggleCustomAttributes( )
 
     <div class="slide" style="width: 360px;">
         <div class="attribute-title">
-            <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash}</h2>
+            <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash} {$custom_tag_name|upfirst|wash}</h2>
         </div>
 
         {* custom tag name is defined as class internally in the editor even though the xml attribute name is 'name' *}
