@@ -10,6 +10,8 @@ eZ Online Editor MCE extension Changelog
 * fixed class not working on p / header / tr / li tags
 * fixed change class list when td / th is changed
 * disabled toolbar floating in ie 6 / 7 to work around floating bug
+* moved ez_core scripts to ezoe folder to avoid design override problems
+* Allow custom tags nesting
 
 
 0.95
